--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,7 @@
 [buildout]
 extends = https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
 package-name = collective.confirmableforms
+package-extras = [test]
 
 [instance]
 eggs +=
