Activate Products.PrintingMailHost in test buildout.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,7 @@ package-extras = [test]
 [instance]
 eggs +=
 #    Products.PDBDebugMode
-#    Products.PrintingMailHost
+    Products.PrintingMailHost
     plone.reload
 
 [versions]
