--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,12 +2,17 @@
 extends = https://raw.github.com/collective/buildout.plonetest/master/test-4.x.cfg
 package-name = collective.confirmableforms
 package-extras = [test]
+parts += omelette
 
 [instance]
 eggs +=
 #    Products.PDBDebugMode
     Products.PrintingMailHost
     plone.reload
+
+[omelette]
+recipe = collective.recipe.omelette
+eggs = ${instance:eggs}
 
 [versions]
 Products.PloneFormGen = <1.8
